--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -55,7 +55,7 @@
   "optional": "optional",
   "clickToUpload": "Click to upload",
   "pngOrJpg": "PNG or JPG (max. 1024x1024px)",
-  "back": "Backs",
+  "back": "Back",
   "to": "To",
   "from": "From",
   "message": "Message",
