Added alreayAMember text

--- a/src/translations/ar/common.json
+++ b/src/translations/ar/common.json
@@ -42,7 +42,8 @@
   "register": "اشتراك",
   "email": "بريد إلكتروني",
   "password": "كلمة المرور",
-  "alreadyAMember": "ليس عضوا؟",
+  "notAMember": "ليس عضوا؟",
+  "alreadyAMember": "بالفعل عضوا؟",
   "signup": "اشتراك",
   "continueWithGoogle": "تواصل مع جوجل",
   "fullName": "الاسم الكامل",
