--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -42,7 +42,8 @@
   "register": "Register",
   "email": "Email",
   "password": "Password",
-  "alreadyAMember": "Not a member?",
+  "notAMember": "Not a member?",
+  "alreadyAMember": "Already a member?",
   "signup": "Signup",
   "continueWithGoogle": "Continue with Google",
   "fullName": "Full Name",
