Minor issues fix, Readme updates

--- a/src/translations/ar/common.json
+++ b/src/translations/ar/common.json
@@ -175,5 +175,6 @@
   "emptyCart": "تفريغ السلة",
   "pleaseAddItemsToYourCart": "يرجى إضافة عناصر إلى سلتك",
   "productDetails": "تفاصيل المنتج",
-  "description": "وصف"
+  "description": "وصف",
+  "serverError": "خطأ في الخادم"
 }
